# CmakePractice

Standardization_project/01_Example/src/: CMakeLists.txt  main.cpp
